Fix alignment

--- a/recipes/stylesheets/keep_awake.css
+++ b/recipes/stylesheets/keep_awake.css
@@ -1,6 +1,5 @@
-header nav form.md-header__option input, header nav form.md-header__option label {
-	position: relative;
-	vertical-align: middle;
+header nav form.md-header__option {
+	align-items: center;
 }
 
 header nav form.md-header__option label {
